--- a/main.css
+++ b/main.css
@@ -1,4 +1,7 @@
 /* Card Container 720/150*12 */
+body {
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif; }
+
 /* 1280/16 /10 *4*/
 .card-box {
   padding: 62.4px 0px 35px 32px; }
@@ -75,7 +78,7 @@ textarea#textarea {
   margin: 0px;
   margin-top: -1px;
   height: 38.4px;
-  width: 2.5%;
+  width: 32px;
   z-index: -1; }
 
 #formcontent-one h1 {
@@ -134,7 +137,8 @@ p#topAns {
   right: 65px;
   font-size: 16px;
   text-decoration: none;
-  line-height: 33px; }
+  line-height: 33px;
+  color: black; }
 
 #formcontent-four {
   /*9 units*/
@@ -155,5 +159,42 @@ p#topAns {
   background-color: transparent;
   height: 28.8px;
   border-radius: 6px; }
+
+.overlay {
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-y: hidden;
+  transition: 0.5s; }
+
+#hiding-website {
+  background-color: gray;
+  height: 700px; }
+
+.closebtn {
+  position: absolute;
+  top: 4%;
+  right: 4%;
+  text-decoration: none;
+  color: black;
+  font-size: 24px; }
+
+/*#hiding-website {
+    width: 70%;
+    background-color: black; 
+    height: 700px; 
+    opacity: 0.2;
+}
+
+div.websiteHiding {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    position: fixed;
+    z-index: 5;
+}*/
 
 /*# sourceMappingURL=main.css.map */
