--- a/main.scss
+++ b/main.scss
@@ -1,12 +1,14 @@
 /* Card Container 720/150*12 */
 
-body{
+body {
     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 }
+
 /* 1280/16 /10 *4*/
 
 .card-box {
     padding: 62.4px 0px 35px 32px;
+    transition: 0.1s;
 }
 
 .card-box hr {
@@ -25,9 +27,12 @@ body{
     margin-top: 0px;
 }
 
-
 /*Card header 36 units*/
 
+#forumModal{
+    background-color: white;
+    display: none;
+}
 .card-header {
     height: 172.8px;
 }
@@ -62,7 +67,7 @@ body{
 #formheader-two {
     /* 720/150*4*/
     margin-top: 19.2px;
-    width:90%;
+    width: 90%;
 }
 
 .card-content {
@@ -158,8 +163,8 @@ p#topAns {
     font-size: 8px;
 }
 
-#userText{
-	padding-left: 8px;
+#userText {
+    padding-left: 8px;
 }
 
 .followBtn a {
@@ -194,6 +199,7 @@ p#topAns {
     height: 28.8px;
     border-radius: 6px;
 }
+
 .overlay {
     height: 0%;
     width: 100%;
@@ -201,16 +207,16 @@ p#topAns {
     z-index: 1;
     top: 0;
     left: 0;
-
     overflow-y: hidden;
     transition: 0.5s;
 }
 
-#hiding-website{
+#hiding-website {
     background-color: gray;
     height: 700px;
 }
-.closebtn{
+
+.closebtn {
     position: absolute;
     top: 4%;
     right: 4%;
@@ -218,19 +224,140 @@ p#topAns {
     color: black;
     font-size: 24px;
 }
-/*#hiding-website {
-    width: 70%;
-    background-color: black; 
-    height: 700px; 
-    opacity: 0.2;
+
+
+#hidewebsit {
+    background-color: rgba(0,0,0,0.4);
+    height: 700px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+        display: none;
+
 }
 
-div.websiteHiding {
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
+.forum-container {
     position: fixed;
-    z-index: 5;
-}*/
+    height: 100%;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    overflow-x: hidden;
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: 0.2s;
+}
+
+.forum-container  a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.2s
+}
+
+.forum-container  a:hover,
+.offcanvas a:focus {
+    color: #f1f1f1;
+}
 
 
+/* Animations */
+
+.slideInUp {
+    -webkit-animation-name: slideInUp;
+    animation-name: slideInUp;
+    -webkit-animation-duration: 1700ms;
+    animation-duration: 1700ms;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes slideInUp {
+    0% {
+        -webkit-transform: translateY(100%);
+        transform: translateY(100%);
+        visibility: visible;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideInUp {
+    0% {
+        -webkit-transform: translateY(100%);
+        transform: translateY(100%);
+        visibility: visible;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+.slideInDown {
+    -webkit-animation-name: slideInDown;
+    animation-name: slideInDown;
+    -webkit-animation-duration: 300ms;
+    animation-duration: 300ms;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes slideInDown {
+    0% {
+        -webkit-transform: translateY(-100%);
+        transform: translateY(-100%);
+        visibility: visible;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideInDown {
+    0% {
+        -webkit-transform: translateY(-100%);
+        transform: translateY(-100%);
+        visibility: visible;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+.zoomIn {
+    -webkit-animation-name: zoomIn;
+    animation-name: zoomIn;
+    -webkit-animation-duration: 500ms;
+    animation-duration: 500ms;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes zoomIn {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale3d(.3, .3, .3);
+        transform: scale3d(.3, .3, .3);
+    }
+    50% {
+        opacity: 1;
+    }
+}
+
+@keyframes zoomIn {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale3d(.3, .3, .3);
+        transform: scale3d(.3, .3, .3);
+    }
+    50% {
+        opacity: 1;
+    }
+}
